Create new web endpoints (#12)